--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": { 
+    "node": "22.x" 
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -12,3 +15,4 @@
     "openai": "^4.56.0"
   }
 }
+
