--- a/package.json
+++ b/package.json
@@ -5,14 +5,26 @@
   "scripts": {
     "start": "node server.js"
   },
-  "engines": { 
-    "node": "22.x" 
+  "engines": {
+    "node": "22.x"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^4.19.2",
-    "openai": "^4.56.0"
-  }
+    "express": "^4.21.2",
+    "openai": "^4.104.0"
+  },
+  "description": "",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stirosario/sti-ai-chat.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stirosario/sti-ai-chat/issues"
+  },
+  "homepage": "https://github.com/stirosario/sti-ai-chat#readme"
 }
-
