--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "sti-rosario-ai",
-  "private": true,
+  "name": "sti-ai-chat",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "22.x"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "openai": "^4.56.0"
-  }
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "openai": "^4.104.0"
+  },
+  "description": "",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stirosario/sti-ai-chat.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stirosario/sti-ai-chat/issues"
+  },
+  "homepage": "https://github.com/stirosario/sti-ai-chat#readme"
 }
