--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
   "name": "sti-ai-chat",
   "version": "1.0.0",
+  "description": "Chat STI • Servicio Técnico Inteligente con integración OpenAI para diagnóstico automatizado",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "22.x"
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.2",
-    "openai": "^4.104.0"
+    "openai": "^4.23.0"
   },
-  "description": "",
-  "main": "server.js",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stirosario/sti-ai-chat.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/stirosario/sti-ai-chat/issues"
   },
-  "homepage": "https://github.com/stirosario/sti-ai-chat#readme"
+  "homepage": "https://github.com/stirosario/sti-ai-chat#readme",
+  "keywords": ["sti", "servicio técnico inteligente", "chatbot", "openai", "nodejs", "express"],
+  "author": "Lucas Bertolino • STI Rosario",
+  "license": "ISC"
 }
