--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-  "cors": "^2.8.5",
-  "dotenv": "^16.4.5",
-  "express": "^4.21.2",
-  "ioredis": "^5.3.2",
-  "openai": "^4.23.0"
-},
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "express-rate-limit": "^6.8.0",
+    "ioredis": "^5.3.2",
+    "openai": "^4.23.0"
+  },
   "devDependencies": {
     "nodemon": "^3.1.7"
   },
