--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,11 +2,11 @@
   "name": "ChatSTI - Servicio Técnico Inteligente",
   "short_name": "ChatSTI",
   "description": "Asistente IA para soporte técnico STI Rosario. Diagnóstico y solución de problemas.",
-  "start_url": "/index.php?source=pwa",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#0a1f44",
-  "theme_color": "#0a1f44",
-  "orientation": "any",
+  "theme_color": "#2563eb",
+  "orientation": "portrait",
   "scope": "/",
   "lang": "es-AR",
   "dir": "ltr",
