--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-rate-limit": "^6.8.0",
     "ioredis": "^5.3.2",
-    "openai": "^4.23.0"
+    "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "openai": "^4.23.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
