--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-rate-limit": "^6.8.0",
+    "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
