--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,60 @@
-OPENAI_API_KEY=tu_clave_aqui
-PORT=3001
+# ========================================================
+# STI CHAT - VARIABLES DE ENTORNO
+# ========================================================
+# Copiar este archivo a .env y configurar los valores reales
+# NUNCA commitear el archivo .env al repositorio
+
+# ========================================================
+# SEGURIDAD CRÍTICA
+# ========================================================
+
+# Token de autenticación para endpoints admin (/api/logs, etc)
+# Generar con: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# IMPORTANTE: Usar un valor aleatorio de al menos 64 caracteres
+SSE_TOKEN=CAMBIAR_ESTE_TOKEN_POR_UNO_ALEATORIO_SEGURO_DE_64_CARACTERES
+
+# ========================================================
+# OPENAI CONFIGURATION
+# ========================================================
+
+# API Key de OpenAI (obtener en https://platform.openai.com/api-keys)
+# Formato: sk-...
+OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# Modelo de OpenAI a usar (default: gpt-4o-mini)
+OPENAI_MODEL=gpt-4o-mini
+
+# ========================================================
+# SERVIDOR Y CORS
+# ========================================================
+
+# Puerto del servidor (default: 3004)
+PORT=3004
+
+# URL pública base (para generación de links)
+PUBLIC_BASE_URL=https://stia.com.ar
+
+# Orígenes permitidos para CORS (separados por coma)
+# PRODUCCIÓN: Solo HTTPS
+ALLOWED_ORIGINS=https://stia.com.ar,https://www.stia.com.ar
+
+# DESARROLLO: Descomentar para incluir localhost
+# ALLOWED_ORIGINS=https://stia.com.ar,http://localhost:3004,http://localhost:5173
+
+# Entorno (development|production)
+NODE_ENV=production
+
+# ========================================================
+# REDIS (Opcional pero recomendado en producción)
+# ========================================================
+
+# URL de conexión a Redis
+# Si no se configura, usa almacenamiento en memoria (se pierde al reiniciar)
+# REDIS_URL=redis://localhost:6379
+
+# ========================================================
+# CONTACTO
+# ========================================================
+
+# Número de WhatsApp para soporte (formato internacional sin +)
+WHATSAPP_NUMBER=5493417422422
