--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-rate-limit": "^6.8.0",
+    "file-type": "^21.1.1",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "openai": "^4.23.0",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
