--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start:modular": "node start-modular.js",
+    "test:modular": "node test-modular.js"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -29,7 +31,8 @@
     "sharp": "^0.34.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "node-fetch": "^3.3.2"
   },
   "repository": {
     "type": "git",
