feat: Implement safe auto-evolution system (AUTOEVOLUCIÓN SEGURA)
🚀 NEW FEATURES:
- Learning system that analyzes real conversations to improve NLP configs
- Automatic pattern detection (typos, synonyms, device mentions, phrases)
- Safe JSON-only modifications (never touches code)
- Automatic backups and rollback on error
- Admin endpoints for analysis and application

📁 NEW FILES:
- services/learningService.js (558 lines) - Core learning engine
- config/nlp-tuning.json - NLP patterns (typos, synonyms, keywords)
- config/device-detection.json - Enhanced device detection patterns
- config/phrases-training.json - Optimized empathetic responses
- config/app-features.json - Feature flags (AUTO_LEARNING_ENABLED)
- AUTOEVOLUCION_IMPLEMENTATION.md - Complete documentation (400+ lines)
- test-autoevolution.js - Comprehensive test suite

🔧 MODIFIED FILES:
- server.js: Added 3 new endpoints (/api/learning/*)
- conversationOrchestrator.js: Integrated dynamic config loading
- .env.example: Added AUTO_LEARNING flags

🔒 SAFETY RULES:
1. NEVER modifies code (.js/.php files)
2. ONLY updates JSON configs in /config
3. ALWAYS creates backups before changes (.bak files)
4. ONLY adds new patterns (never deletes)
5. Validates changes before applying
6. Logs everything to logs/learning.log

📊 API ENDPOINTS:
- GET /api/learning/report - Analyze conversations (READ-ONLY)
- POST /api/learning/apply - Apply improvements (requires AUTO_LEARNING=true)
- GET /api/learning/config - Get current config

✅ TESTS:
- All 5 tests passing (load configs, create mocks, analyze, apply, safety)
- 15 mock transcripts created for testing
- Verified config integration with orchestrator

🎯 KEY FEATURES:
- Min 10 conversations required for analysis
- Min 0.7 confidence threshold for suggestions
- Max 20 suggestions per run
- Automatic rollback on error
- Token-protected endpoints (LOG_TOKEN)
- Dry-run mode for testing

📝 USAGE:
1. Enable: Set AUTO_LEARNING_ENABLED=true in .env
2. Analyze: GET /api/learning/repo

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,30 @@ NODE_ENV=production
 
 # Número de WhatsApp para soporte (formato internacional sin +)
 WHATSAPP_NUMBER=5493417422422
+
+# ========================================================
+# FEATURE FLAGS
+# ========================================================
+
+# Activar arquitectura modular (experimental)
+USE_MODULAR_ARCHITECTURE=false
+
+# Activar Conversation Orchestrator (nuevo motor conversacional)
+USE_ORCHESTRATOR=false
+
+# Activar auto-aprendizaje seguro desde conversaciones reales
+AUTO_LEARNING_ENABLED=false
+
+# ========================================================
+# AUTO-LEARNING CONFIGURATION
+# ========================================================
+
+# Número mínimo de conversaciones requeridas para análisis
+MIN_CONVERSATIONS_FOR_ANALYSIS=10
+
+# Umbral de confianza mínimo para aplicar sugerencias (0.0 - 1.0)
+MIN_CONFIDENCE_THRESHOLD=0.7
+
+# Máximo de sugerencias a aplicar por ejecución
+MAX_SUGGESTIONS_PER_RUN=20
+
