feat: Activate AUTO-LEARNING system with automatic scheduler
🚀 SISTEMA DE AUTO-APRENDIZAJE ACTIVADO

✅ CONFIGURACIÓN:
- .env: AUTO_LEARNING_ENABLED=true
- .env: USE_ORCHESTRATOR=true (requerido)
- config/app-features.json: autoLearning=true
- Thresholds: minConfidence=0.75, maxSuggestions=10
- Interval: 24 horas entre ciclos

✅ FUNCIONES NUEVAS (learningService.js):
- runAutoLearningCycle() - Ejecuta ciclo completo automático:
  1. Analiza conversaciones
  2. Genera sugerencias
  3. Aplica mejoras seguras
  4. Recarga configs en orchestrator
  5. Registra todo en logs/learning.log

- getAutoLearningStatus() - Estado del sistema:
  * autoLearningEnabled: true/false
  * config: thresholds y settings
  * lastRun: timestamp última ejecución
  * lastChanges: últimos 5 cambios aplicados

✅ SCHEDULER AUTOMÁTICO (server.js):
- Se activa al iniciar servidor si AUTO_LEARNING_ENABLED=true
- Ciclo inicial: 30 segundos después del inicio (si autoRunOnStartup=true)
- Ciclos periódicos: cada 24 horas (configurable con AUTO_LEARNING_INTERVAL_HOURS)
- Logs detallados: [AUTO-LEARNING] prefijo en consola

✅ ENDPOINT NUEVO:
- GET /api/learning/status?token=TOKEN
  * Devuelve estado completo del sistema
  * Última ejecución y cambios aplicados
  * Configuración actual

🔒 SEGURIDAD GARANTIZADA:
- Solo se ejecuta si ambos flags están true (ENV + JSON)
- NUNCA modifica código (.js/.php)
- SOLO actualiza archivos JSON en /config
- Backups automáticos antes de cada cambio
- Rollback automático en errores
- Logs completos en logs/learning.log

📊 CÓMO MONITOREAR:
1. Iniciar servidor: npm start
2. Buscar líneas [AUTO-LEARNING] en logs
3. Verificar status: curl localhost:3001/api/learning/status?token=TOKEN
4. Ver logs detallados: cat logs/learning.log

📝 TESTING:
- test-autolearning-active.js: Verifica configuración
- Todos los tests pasando ✅

Implements: #autolearning-activation
Ref: AUTOEVOLUCION_IMPLEMENTATION.md

--- a/config/app-features.json
+++ b/config/app-features.json
@@ -4,17 +4,21 @@
   "description": "Configuración de funcionalidades de la aplicación",
   
   "features": {
-    "autoLearning": false,
+    "autoLearning": true,
     "visionAPI": false,
     "smartMode": false,
-    "useOrchestrator": false,
+    "useOrchestrator": true,
     "useModularArchitecture": false
   },
   
   "learning": {
+    "enabled": true,
     "minConversationsForAnalysis": 10,
-    "minConfidenceToApply": 0.7,
-    "maxSuggestionsPerRun": 20,
+    "minConfidenceToApply": 0.75,
+    "maxSuggestionsPerCycle": 10,
+    "maxSuggestionsPerRun": 10,
+    "autoRunOnStartup": true,
+    "autoRunIntervalHours": 24,
     "backupBeforeApply": true,
     "autoRollbackOnError": true
   },
